@@ -44,7 +44,7 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="BrowsePublic" name="panel_find_data" native="true">
+         <widget class="WidgetFindData" name="panel_find_data" native="true">
           <property name="acceptDrops">
            <bool>true</bool>
           </property>
@@ -52,7 +52,7 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="tab_user">
+      <widget class="QWidget" name="tab_my_data">
        <attribute name="icon">
         <iconset theme="street-view"/>
        </attribute>
@@ -60,92 +60,20 @@
         <string>My Data</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_3">
-          <property name="topMargin">
-           <number>0</number>
-          </property>
-          <item>
-           <widget class="QLabel" name="label_5">
-            <property name="text">
-             <string>Show my data</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Orientation::Horizontal</enum>
-            </property>
-            <property name="sizeType">
-             <enum>QSizePolicy::Policy::Fixed</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="checkBox_user_owned">
-            <property name="text">
-             <string>uploaded by me</string>
-            </property>
-            <property name="checked">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="checkBox_user_following">
-            <property name="text">
-             <string>followed by me</string>
-            </property>
-            <property name="checked">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QCheckBox" name="checkBox_user_shared">
-            <property name="text">
-             <string>shared with me</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Orientation::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>30</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QPushButton" name="pushButton_user_refresh">
-            <property name="text">
-             <string>Update</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item>
-         <widget class="FilterChainUser" name="user_filter_chain" native="true">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-         </widget>
+         <widget class="WidgetMyData" name="panel_my_data" native="true"/>
         </item>
        </layout>
       </widget>
@@ -339,13 +267,7 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>FilterChainUser</class>
-   <extends>QWidget</extends>
-   <header>dcoraid.gui.dbview.filter_chain</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>BrowsePublic</class>
+   <class>WidgetFindData</class>
    <extends>QWidget</extends>
    <header>dcoraid.gui.panel_find_data.widget_find_data</header>
    <container>1</container>
@@ -354,6 +276,12 @@
    <class>WidgetLog</class>
    <extends>QWidget</extends>
    <header>dcoraid.gui.logs.widget_log</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>WidgetMyData</class>
+   <extends>QWidget</extends>
+   <header>dcoraid.gui.panel_my_data.widget_my_data</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
